--- a/LinearRegression/bin/run.conf
+++ b/LinearRegression/bin/run.conf
@@ -1,6 +1,7 @@
-./train-1000-100.csv , 1000 100		//172.17183680712608(lambda =5)
-./test-1000-100.csv  , 1000 100		//
-./train-100-10.csv  , 1000 10		//26.8183605207028(lambda=5)
-./test-100-10.csv  , 1000 10		//
-./train-100-100.csv  , 100 100		//190.25776307662898(lambda=5)
-./test-100-100.csv  , 1000 100		//
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100		
+./train-100-10.csv  , 100 10	./test-100-10.csv  , 1000 10		
+./train-100-100.csv  , 100 100	./test-100-100.csv  , 1000 100	
+./50(1000)_100_train.csv , 50 100 ./test-1000-100.csv  , 1000 100
+./100(1000)_100_train.csv , 100 100 ./test-1000-100.csv  , 1000 100
+./150(1000)_100_train.csv , 150 100 ./test-1000-100.csv  , 1000 100
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q2 150
