--- a/LinearRegression/src/run.conf
+++ b/LinearRegression/src/run.conf
@@ -1,6 +1,8 @@
 ./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100		
-./train-100-10.csv  , 1000 10	./test-100-10.csv  , 1000 10		
+./train-100-10.csv  , 100 10	./test-100-10.csv  , 1000 10		
 ./train-100-100.csv  , 100 100	./test-100-100.csv  , 1000 100	
 ./50(1000)_100_train.csv , 50 100 ./test-1000-100.csv  , 1000 100
 ./100(1000)_100_train.csv , 100 100 ./test-1000-100.csv  , 1000 100
 ./150(1000)_100_train.csv , 150 100 ./test-1000-100.csv  , 1000 100
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q2 25
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q3 10
