--- a/LinearRegression/src/run.conf
+++ b/LinearRegression/src/run.conf
@@ -1,8 +1,15 @@
-./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100		
-./train-100-10.csv  , 100 10	./test-100-10.csv  , 1000 10		
-./train-100-100.csv  , 100 100	./test-100-100.csv  , 1000 100	
-./50(1000)_100_train.csv , 50 100 ./test-1000-100.csv  , 1000 100
-./100(1000)_100_train.csv , 100 100 ./test-1000-100.csv  , 1000 100
-./150(1000)_100_train.csv , 150 100 ./test-1000-100.csv  , 1000 100
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100	Q1
+./train-100-10.csv  , 100 10	./test-100-10.csv  , 1000 10 Q1	
+./train-100-100.csv  , 100 100	./test-100-100.csv  , 1000 100 Q1
+./50(1000)_100_train.csv , 50 100 ./test-1000-100.csv  , 1000 100 Q1
+./100(1000)_100_train.csv , 100 100 ./test-1000-100.csv  , 1000 100 Q1
+./150(1000)_100_train.csv , 150 100 ./test-1000-100.csv  , 1000 100 Q1
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q2 1
 ./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q2 25
-./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q3 10
+./train-1000-100.csv , 1000 100	./test-1000-100.csv  , 1000 100 Q2 150
+./train-1000-100.csv , Q3 10
+./train-100-10.csv , Q3 10
+./train-100-100.csv , Q3 10
+./50(1000)_100_train.csv , Q3 10
+./100(1000)_100_train.csv , Q3 5
+./150(1000)_100_train.csv , Q3 10
