--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,7 @@ Temporary Items
 HelloWorld
 GraphAlgorithms
 *.class
-*.zip
 *.R
+./LinearRegression/bin
+Smitha_BangaloreNaresh_CS6220_HW1
+Smitha_BangaloreNaresh_CS6220_HW2
